@@ -55,9 +55,26 @@ def sparkTestProperties(overrides = [:]) {
       "spark.sql.shuffle.partitions": "4",
       "spark.ui.enabled"            : "false",
       "spark.ui.showConsoleProgress": "false",
+      "spark.kryo.registrationRequired": "true", // be strict in tests
       "beamTestPipelineOptions"     :
           JsonOutput.toJson((defaults + overrides).collect { k, v -> "$k=$v" })
   ]
+}
+
+
+def sparkTestJvmArgs() {
+  // run tests with Java 17 using -PcompileAndRunTestsWithJava17 -Pjava17Home=???
+  if (project.hasProperty("compileAndRunTestsWithJava17")) {
+    return [
+      "--add-opens=java.base/sun.nio.ch=ALL-UNNAMED",
+      // add-opens below required for Kryo FieldSerializer / SparkRunnerKryoRegistratorTest
+      "--add-opens=java.base/java.nio=ALL-UNNAMED",
+      "--add-opens=java.base/java.util=ALL-UNNAMED",
+      "--add-opens=java.base/java.lang.invoke=ALL-UNNAMED"
+    ]
+  } else {
+    return []
+  }
 }
 
 def hadoopVersions = [
@@ -112,6 +129,7 @@ test {
   // Change log level to debug only for the package and nested packages:
   // systemProperty "org.slf4j.simpleLogger.log.org.apache.beam.runners.spark.stateful", "debug"
   jvmArgs "-XX:-UseGCOverheadLimit"
+  jvmArgs += sparkTestJvmArgs()
   if (System.getProperty("beamSurefireArgline")) {
     jvmArgs System.getProperty("beamSurefireArgline")
   }
@@ -184,6 +202,7 @@ dependencies {
   testImplementation library.java.kafka_clients
   testImplementation library.java.junit
   testImplementation library.java.mockito_core
+  testImplementation "org.assertj:assertj-core:3.11.1"
   testImplementation "org.apache.zookeeper:zookeeper:3.4.11"
   validatesRunner project(path: ":sdks:java:core", configuration: "shadowTest")
   validatesRunner project(path: ":runners:core-java", configuration: "testRuntimeMigration")
@@ -206,6 +225,8 @@ configurations.all {
   exclude group: "org.slf4j", module: "slf4j-jdk14"
   // Avoid any transitive usage of the old codahale group to make dependency resolution deterministic
   exclude group: "com.codahale.metrics", module: "metrics-core"
+  // Prevent conflict with kryo-shaded used by spark (from :sdks:java:core testRuntimeClasspath)
+  exclude group: "com.esotericsoftware.kryo", module: "kryo"
 }
 
 configurations.validatesRunner {
@@ -226,6 +247,8 @@ def validatesRunnerBatch = tasks.register("validatesRunnerBatch", Test) {
   // Disable gradle cache
   outputs.upToDateWhen { false }
   systemProperties sparkTestProperties(["--enableSparkMetricSinks":"false"])
+  jvmArgs += sparkTestJvmArgs()
+  jvmArgs '-Xmx3g'
 
   classpath = configurations.validatesRunner
   testClassesDirs = files(
@@ -243,6 +266,7 @@ def validatesRunnerBatch = tasks.register("validatesRunnerBatch", Test) {
     excludeCategories 'org.apache.beam.sdk.testing.UsesLoopingTimer'
     excludeCategories 'org.apache.beam.sdk.testing.UsesOnWindowExpiration'
     excludeCategories 'org.apache.beam.sdk.testing.UsesOrderedListState'
+    excludeCategories 'org.apache.beam.sdk.testing.UsesMultimapState'
     // Unbounded
     excludeCategories 'org.apache.beam.sdk.testing.UsesUnboundedPCollections'
     excludeCategories 'org.apache.beam.sdk.testing.UsesTestStream'
@@ -259,7 +283,6 @@ def validatesRunnerBatch = tasks.register("validatesRunnerBatch", Test) {
     excludeCategories 'org.apache.beam.sdk.testing.UsesPerKeyOrderedDelivery'
     excludeCategories 'org.apache.beam.sdk.testing.UsesPerKeyOrderInBundle'
   }
-  jvmArgs '-Xmx3g'
 }
 
 def validatesRunnerStreaming = tasks.register("validatesRunnerStreaming", Test) {
@@ -267,6 +290,7 @@ def validatesRunnerStreaming = tasks.register("validatesRunnerStreaming", Test) 
   // Disable gradle cache
   outputs.upToDateWhen { false }
   systemProperties sparkTestProperties(["--enableSparkMetricSinks": "true"])
+  jvmArgs += sparkTestJvmArgs()
 
   classpath = configurations.validatesRunner
   testClassesDirs += files(
@@ -322,6 +346,12 @@ tasks.register("validatesStructuredStreamingRunnerBatch", Test) {
   // Disable gradle cache
   outputs.upToDateWhen { false }
   systemProperties sparkTestProperties(["--runner":"SparkStructuredStreamingRunner", "--testMode":"true"])
+  // Register various other classes used in tests
+  systemProperty 'spark.kryo.classesToRegister',
+    'org.apache.beam.sdk.transforms.ViewTest$NonDeterministicStringCoder,' +
+    'org.apache.beam.vendor.guava.v26_0_jre.com.google.common.collect.RegularImmutableList'
+  jvmArgs += sparkTestJvmArgs()
+  jvmArgs '-Xmx7g' // Increase memory heap in order to avoid OOM errors
 
   classpath = configurations.validatesRunner
   testClassesDirs = files(
@@ -331,8 +361,7 @@ tasks.register("validatesStructuredStreamingRunnerBatch", Test) {
   testClassesDirs += files(project.sourceSets.test.output.classesDirs)
 
   maxParallelForks 4
-  // Increase memory heap in order to avoid OOM errors
-  jvmArgs '-Xmx7g'
+
   useJUnit {
     includeCategories 'org.apache.beam.sdk.testing.ValidatesRunner'
     // Should be run only in a properly configured SDK harness environment
@@ -343,6 +372,7 @@ tasks.register("validatesStructuredStreamingRunnerBatch", Test) {
     // State and Timers
     excludeCategories 'org.apache.beam.sdk.testing.UsesStatefulParDo'
     excludeCategories 'org.apache.beam.sdk.testing.UsesMapState'
+    excludeCategories 'org.apache.beam.sdk.testing.UsesMultimapState'
     excludeCategories 'org.apache.beam.sdk.testing.UsesSetState'
     excludeCategories 'org.apache.beam.sdk.testing.UsesOrderedListState'
     excludeCategories 'org.apache.beam.sdk.testing.UsesTimersInParDo'
@@ -400,6 +430,8 @@ tasks.register("examplesIntegrationTest", Test) {
       "--tempRoot"    : "${tempLocation}",
       "--project"     : "${gcpProject}"
   ])
+  jvmArgs += sparkTestJvmArgs()
+  jvmArgs '-Xmx3g'
 
   include '**/*IT.class'
   maxParallelForks 4
@@ -412,7 +444,6 @@ tasks.register("examplesIntegrationTest", Test) {
       excludeTestsMatching 'org.apache.beam.examples.WindowedWordCountIT.testWindowedWordCountInBatchDynamicSharding'
     }
   }
-  jvmArgs '-Xmx3g'
 }
 
 hadoopVersions.each { kv ->
@@ -421,6 +452,7 @@ hadoopVersions.each { kv ->
     description = "Runs Spark tests with Hadoop version $kv.value"
     classpath = configurations."hadoopVersion$kv.key" + sourceSets.test.runtimeClasspath
     systemProperties sparkTestProperties()
+    jvmArgs += sparkTestJvmArgs()
 
     include "**/*Test.class"
     maxParallelForks 4
